--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/ws": "^8.5.12",
     "chess.js": "^1.0.0-beta.8",
     "express": "^4.19.2",
+    "redis": "^4.7.0",
     "typescript": "^5.5.4",
     "ws": "^8.18.0"
   }
