--- a/backeend/authenticatin_service/package.json
+++ b/backeend/authenticatin_service/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.20.0",
     "zod": "^3.23.8"
   }
