--- a/backeend/http_server/package.json
+++ b/backeend/http_server/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^5.20.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.20.0"
   }
 }
