--- a/backeend/http_server/package.json
+++ b/backeend/http_server/package.json
@@ -11,9 +11,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
